--- a/Barcode/.settings/org.eclipse.core.resources.prefs
+++ b/Barcode/.settings/org.eclipse.core.resources.prefs
@@ -2,3 +2,4 @@ eclipse.preferences.version=1
 encoding//WebContent/js/follower.js=UTF-8
 encoding//WebContent/map/MapPr.jsp=UTF-8
 encoding//WebContent/movie/movie_detail.jsp=UTF-8
+encoding//WebContent/movie/point.jsp=UTF-8
