--- a/Barcode/.settings/org.eclipse.core.resources.prefs
+++ b/Barcode/.settings/org.eclipse.core.resources.prefs
@@ -1,6 +1,7 @@
 eclipse.preferences.version=1
 encoding//WebContent/js/follower.js=UTF-8
 encoding//WebContent/map/MapPr.jsp=UTF-8
+encoding//WebContent/member/mypage.jsp=UTF-8
 encoding//WebContent/movie/movie_detail.jsp=UTF-8
 encoding//WebContent/movie/point.jsp=UTF-8
 encoding//WebContent/reserve/place_board.jsp=UTF-8
