--- a/Barcode/.settings/org.eclipse.core.resources.prefs
+++ b/Barcode/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,5 @@
 eclipse.preferences.version=1
+encoding//WebContent/css/admin_style.css=UTF-8
 encoding//WebContent/css/style.css=UTF-8
 encoding//WebContent/js/follower.js=UTF-8
 encoding//WebContent/member/mypage.jsp=UTF-8
