--- a/Barcode/.settings/org.eclipse.core.resources.prefs
+++ b/Barcode/.settings/org.eclipse.core.resources.prefs
@@ -4,5 +4,6 @@ encoding//WebContent/css/style.css=UTF-8
 encoding//WebContent/js/follower.js=UTF-8
 encoding//WebContent/member/mypage.jsp=UTF-8
 encoding//WebContent/movie/movie_home.jsp=UTF-8
+encoding//WebContent/movie/movie_home_files/movie.home.js=UTF-8
 encoding//WebContent/movie/point.jsp=UTF-8
 encoding//WebContent/reserve/place_board.jsp=UTF-8
